--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
