--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.13.13",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "nodemon": "^2.0.7",
